--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,13 +74,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.beritahariini"
+    namespace "com.beritahariininews"
     defaultConfig {
-        applicationId "com.beritahariini"
+        applicationId "com.beritahariininews"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.0.0"
     }
     signingConfigs {
         debug {
@@ -101,6 +101,8 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+                  applicationIdSuffix ".dev"
+            manifestPlaceholders = [app_name: "Fakta Cepat24 Dev"]
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -108,6 +110,7 @@ android {
             signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+               manifestPlaceholders = [app_name: "Fakta Cepat24"]
         }
     }
 }
