--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <application
     android:name=".MainApplication"
-    android:label="@string/beritahariini"
+    android:label="${app_name}"
     android:icon="@mipmap/ic_launcher"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:allowBackup="false"
     android:theme="@style/AppTheme">
     <activity
       android:name=".MainActivity"
-      android:label="@string/beritahariini"
+      android:label="${app_name}"
       android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
       android:launchMode="singleTask"
       android:windowSoftInputMode="adjustResize"
